feat: hiện thực các API mới.
- Cho phép:
    - Tạo, thay đổi, nhận thông tin sản phẩm.
    - Tạo, thay đổi, xóa, nhận giá sản phẩm.
    - Tạo, thay đổi, nhận kích thước cho sản phẩm.
    - Tạo, thay đổi, nhận danh mục sản phẩm.
    - Tạo, thay đổi, nhận đơn vị tính.
    - Tạo, thay đổi, nhận kích thước sản phẩm.
    - Tạo, thay đổi, nhận thông tin tài khoản.
    - Tạo, thay đổi, nhận thông tin vai trò.
    - Tạo, thay đổi, nhận thông tin người quản lý.
    - Tạo, thay đổi, nhận thông tin nhân viên.
    - Tạo, thay đổi, nhận thông tin khách hàng.
    - Tạo, thay đổi, nhận thông tin khách hàng.
    - Tạo, thay đổi, nhận thông tin chương trình thành viên.
    - Tạo, thay đổi, nhận thông tin khu vực.
    - Tạo, thay đổi, nhận thông tin bàn.
    - Tạo, thay đổi, nhận thông tin cửa hàng.
    - Tạo, thay đổi, nhận thông tin mã khuyến mãi.
    - Tạo, thay đổi, nhận thông tin chương trình khuyến mãi.
    - Tạo đơn hàng, hủy đơn hàng.
    - Tiến hành thanh toán:
        - Thanh toán bằng tiền mặt.

BREAKING-CHANGE:
- Hoàn thành refactor code.
- Bổ sung xác thực dùng jwt.

Author: Nguyen Ngoc Phu
Signed-off-by: Nguyễn Ngọc Phú <55185818+phunguy65@users.noreply.github.com>